--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <script src="script.js"></script>
   <title>SafJ</title>
@@ -33,7 +33,7 @@
     
     <div class="w3-container">
       <div class="home">
-        <h1 id="title">INVITA ANCHE TU IL BEEBOT<img src="/rsc/img/logoBeeBot.png" alt="frake" width="12%"></h1>
+        <h1 id="title">INVITA ANCHE TU IL BEEBOT<img src="img/logoBeeBot.png" alt="frake" width="12%"></h1>
 
         <div class="invite">
           <a href="https://discord.com/oauth2/authorize?client_id=938487470339801169&scope=bot" class="w3-button w3-teal w3-round-large">Invita</a>
