--- a/documents.html
+++ b/documents.html
@@ -277,7 +277,7 @@ text-align: center;
           <div class="document">
       
               <iframe
-                src='../Doc/Latex/BeeBot.pdf'
+                src='/rsc/BeeBot.pdf'
                 width="500"
                 height="678"
                 id="pdf"
